--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 Hello World
-  <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
+  <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags
   <!-- Text Formatting in HTML -->
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
@@ -36,7 +36,7 @@ Hello World
   nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
   ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
   voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
-  eum fugiat quo voluptas nulla pariatur?
+  eum fugiat quo voluptas nulla pariatur? -->
 
 
 </body>
